добавлено указание кодировки для проекта

--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,10 @@
 apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "First"
+compileJava.options.encoding = 'windows-1251' // устанавливает кодировку для компилируемого кода
+javadoc.options.encoding = 'windows-1251' // устанавливает кодировку для генерируемой документации
+compileTestJava.options.encoding = 'windows-1251'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'windows-1251'
+}
